Align server view containers correctly

--- a/app/assets/stylesheets/servers.scss
+++ b/app/assets/stylesheets/servers.scss
@@ -44,7 +44,7 @@
 
 .server-conversation-master {
   border: 1px solid black;
-  width: calc(100vw - 500px)
+  width: calc(100vw - 520px)
 }
 
 .server-friends-master {
